# leet

./: .clang-format  .editorconfig  .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  icancrc.toml
.github/workflows/: beecrowd.yaml  ctest.yaml  icanc.yaml
benchmarks/: CMakeLists.txt  benchmarks.h
benchmarks/ds/: bstree.c
cmake/: Benchmarks.cmake  FindSphinx.cmake  Programs.cmake  Tests.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  requirements.txt  todo.rst
docs/_charts/: README.md  bench.bstree_insert_fnptr.json
docs/lib/: index.rst
docs/lib/alg/: index.rst  sort.rst
docs/lib/ds/: arrstack.rst  bstree.rst  btree.rst  index.rst  llist.rst  mat.rst  slice.rst
docs/lib/overview/: comparators.rst  errors.rst  index.rst
docs/lib/utilities/: container_of.rst  index.rst
docs/problems/: index.rst
docs/problems/beecrowd/: 1000.rst  1069.rst  1200.rst  1201.rst  2179.rst  index.rst
docs/programs/: calc.rst  index.rst
include/: CMakeLists.txt  container_of.h  error.h  icanc.h  leet.h
include/alg/: sort.h
include/ds/: arrstack.h  bstree.h  btree.h  llist.h  mat.h  slice.h
problems/: LICENSE
problems/beecrowd/1000/: solution.c
problems/beecrowd/1069/: counter.c  stack.c  testcases.toml
problems/beecrowd/1200/: solution.c  testcases.toml
problems/beecrowd/1201/: solution.c  testcases.toml
problems/beecrowd/2179/: nomat.c  testcases.toml  walk.c
programs/: CMakeLists.txt
programs/calc/: main.c
scripts/: benchmark_chart.py
templates/: main.c
tests/: CMakeLists.txt  error.c  leet.c  tests.h
tests/alg/: sort.c
tests/ds/: arrstack.c  bstree.c  btree.c  llist.c  mat.c  slice.c
